--- a/style.css
+++ b/style.css
@@ -22,95 +22,121 @@ nav {
   background: linear-gradient(#F4E9E2, #FAF1EC);
   height: 128px;
   width: 100%;
-  margin-left: 0px;
-  margin-right: 0px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 nav .logo-container {
-  padding-left: 130px;
   display: inline-block;
   padding-top: 35px;
 }
+nav .logo-container svg:nth-of-type(2) {
+  position: relative;
+  top: -17px;
+}
+@media (min-width: 1100px) {
+  nav .logo-container {
+    padding-left: 130px;
+    display: inline-block;
+    padding-top: 35px;
+  }
+}
 nav ul {
-  float: right;
-  margin-right: 20px;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: #F4E9E2;
+  top: 80px;
+  left: -100%;
+  text-align: center;
+  transition: all 0.5s;
 }
 @media (min-width: 900px) {
   nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: #F4E9E2;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
+    position: static;
+    width: auto;
+    height: auto;
+    float: right;
+    background-color: transparent;
+    text-align: right;
   }
 }
 nav ul li {
-  display: inline-block;
-  line-height: 90px;
-  margin: 0 5px;
+  display: block;
+  margin: 50px 0;
+  line-height: 30px;
+}
+@media (min-width: 900px) {
+  nav ul li {
+    display: inline-block;
+    line-height: 90px;
+    margin: 0 5px;
+  }
+  nav ul li:last-of-type {
+    background-color: #647B64;
+    color: white;
+    padding: 15px 10px;
+    line-height: 0px;
+  }
 }
 nav ul li a {
-  color: #333333;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding: 7px 24px;
-}
-nav ul li a:a:hover {
   color: #66AC66;
-  transition: 0.5s;
+  font-size: 20px;
+}
+nav ul li a:hover {
+  background: none;
+  color: rebeccapurple;
+}
+@media (min-width: 900px) {
+  nav ul li a:hover {
+    color: red;
+    transition: 0.5s;
+  }
+}
+@media (min-width: 900px) {
+  nav ul li a {
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: 7px 12px;
+    color: #333333;
+  }
+  nav ul li a:first-letter {
+    font-size: 18px;
+    color: rebeccapurple;
+  }
+  nav ul li a:last-of-type {
+    padding-right: 0px;
+  }
+}
+@media (min-width: 1100px) {
+  nav ul li a {
+    padding: 7px 24px;
+  }
+  nav ul li a:last-of-type {
+    padding-right: 0px;
+  }
 }
 nav .checkbtn {
   font-size: 30px;
   color: #222B45;
   float: right;
-  line-height: 80px;
-  margin-right: 40px;
+  line-height: 123px;
+  margin-right: 0px;
   cursor: pointer;
-  display: none;
+  display: block;
 }
 @media (min-width: 900px) {
-  nav .checkbtn .checkbtn {
-    display: block;
+  nav .checkbtn {
+    display: none;
   }
 }
 nav #check {
   display: none;
 }
-
-@media (min-width: 900px) {
-  .checkbtn {
-    display: block;
-  }
+nav #check:checked ~ ul {
+  left: 0;
 }
-@media (max-width: 950px) {
-  .checkbtn {
-    display: block;
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: #F4E9E2;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
-  }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
-  a:hover {
-    background: none;
-    color: #66AC66;
-  }
-  #check:checked ~ ul {
-    left: 0;
+@media (min-width: 900px) {
+  nav #check {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
