--- a/style.scss
+++ b/style.scss
@@ -35,104 +35,26 @@ nav{
     background: linear-gradient(#F4E9E2, #FAF1EC);
     height: 128px;
     width: 100%;
-
-    margin-left: -0px;
-    margin-right: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
 
     .logo-container{
+        
+        display: inline-block;
+        padding-top: 35px;
+        
+        svg{
+            &:nth-of-type(2){
+            position: relative;
+            top: -17px;
+            }
+        }
+
+        @include responsive.xl{
         padding-left: 130px;
         display: inline-block;
         padding-top: 35px;
-    }
-
-    ul{
-        float: right;
-        margin-right: 20px;
-        @include responsive.lg{
-            position: fixed;
-            width: 100%;
-            height: 100vh;
-            background-color: #F4E9E2;
-            top: 80px;
-            left: -100%;
-            text-align: center;
-            transition: all .5s;
         }
-        
-        li{
-            display: inline-block;
-            line-height: 90px;
-            margin: 0 5px;
-
-            a{
-                color: #333333;
-                font-size: 16px;
-                text-transform: uppercase;
-                padding: 7px 24px;
-                @include responsive.xl{
-                    
-                    // display: none;
-                    
-                }
-
-                &:a:hover{
-                    color: #66AC66;
-                    transition: .5s;
-                }
-            }
-        }
-
-    }
-
-    .checkbtn{
-        font-size: 30px;
-        color: #222B45;
-        float: right;
-        line-height: 80px;
-        margin-right: 40px;
-        cursor: pointer;
-        display: none;
-
-        @include responsive.lg{
-            .checkbtn{
-                display: block;
-            }
-        }
-    }
-
-    #check{
-        display: none;
-    }
-
-    
-
-
-
-
-
-
-}
-
-
-
-// @include responsive.xl{
-    //     nav ul li a{
-    //         // display: none;
-    //     }
-    // }
-
-
-
-@include responsive.lg{
-    .checkbtn{
-        display: block;
-    }
-}
-
-
-@media (max-width: 950px){
-    .checkbtn{
-        display: block;
     }
 
     ul{
@@ -144,21 +66,116 @@ nav{
         left: -100%;
         text-align: center;
         transition: all .5s;
+
+        @include responsive.lg{
+        position: static;
+        width: auto;
+        height: auto;
+        float: right;
+        // margin-right: 20px;
+        background-color: transparent;
+        text-align: right;
+            
+        }
+
+        // @include responsive.xl{
+        // position: static;
+        // width: auto;
+        // height: auto;
+        // float: right;
+        // margin-right: 20px;
+        // background-color: transparent;
+        // text-align: right;
+            
+        // }
+        
+        li{
+            display: block;
+            margin: 50px 0;
+            line-height: 30px;
+
+            @include responsive.lg{
+            display: inline-block;
+            line-height: 90px;
+            margin: 0 5px;
+            &:last-of-type{
+                background-color: #647B64;
+                color: white;
+                padding: 15px 10px;
+                line-height: 0px;
+            }
+            }
+
+            a{
+                color: #66AC66;
+                font-size: 20px;
+
+                &:hover{
+                    background: none;
+                    color: rebeccapurple;
+                    @include responsive.lg{
+                    color: red;
+                    transition: .5s;
+                    }
+                }
+                
+                @include responsive.lg{
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    padding: 7px 12px;
+                    color: #333333;
+
+                    &:first-letter{
+                    font-size: 18px;
+                    color: rebeccapurple;
+                    }
+                    &:last-of-type{
+                        padding-right: 0px;
+                        
+                    }
+                }
+                 @include responsive.xl{
+                    padding: 7px 24px;
+
+                    &:last-of-type{
+                        padding-right: 0px;
+                        
+                    }
+                    
+                }
+
+                
+            }
+        }
+
     }
-    nav ul li{
+
+    .checkbtn{
+        font-size: 30px;
+        color: #222B45;
+        float: right;
+        line-height: 123px;
+        margin-right: 0px;
+        cursor: pointer;
         display: block;
-        margin: 50px 0;
-        line-height: 30px;
+        
+
+        @include responsive.lg{
+        display: none;
+        }
     }
-    nav ul li a{
-        font-size: 20px;
+
+    #check{
+        display: none;
+        &:checked ~ ul{
+            left: 0;
+        }
+        @include responsive.lg{
+            display: none;
+        }
     }
-    a:hover{
-        background: none;
-        color: #66AC66;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
+
+
 }
+
 
