--- a/style.scss
+++ b/style.scss
@@ -229,4 +229,11 @@ nav{
     p{
         max-width: 70%;
     }
+
+    svg{
+        width: 50%;
+        position: relative;
+        left: 264px;
+        top: -380px;
+    }
 }
