--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
   background-color: #F6F0EB;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 .container {
   max-width: 1440px;
   margin-right: auto;
@@ -25,6 +29,18 @@ h1 {
   text-align: left;
 }
 
+h2 {
+  font-size: 13px;
+  color: #F3B562;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 20px;
+  color: #647B64;
+  text-transform: uppercase;
+}
+
 p {
   color: #4F4F4F;
   font-size: 10px;
@@ -32,21 +48,17 @@ p {
        text-align-last: left;
 }
 
-.wrap {
-  padding: 0px 32px;
-}
-
 .get-started-button {
   position: relative;
-  z-index: 10;
+  z-index: -10;
   display: block;
-  width: 175px;
-  height: 37px;
+  max-width: 175px;
   color: white;
   text-transform: uppercase;
-  background-color: #647B64;
+  background: rgb(100, 123, 100);
+  background: linear-gradient(121deg, rgb(100, 123, 100) 0%, rgb(102, 172, 102) 100%);
   font-size: 11px;
-  font-style: bold;
+  font-weight: bold;
   padding: 15px 10px 10px;
   border-radius: 3px;
 }
@@ -185,15 +197,96 @@ nav #check:checked ~ ul {
   }
 }
 
-.intro h1 {
-  max-width: 75%;
+.intro .wrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-right: 0px;
+  padding-left: 32px;
 }
-.intro p {
-  max-width: 70%;
+.intro .wrap .content-box {
+  width: 70%;
 }
-.intro svg {
-  width: 50%;
-  position: relative;
-  left: 264px;
-  top: -380px;
+.intro .wrap .img-container {
+  width: 30%;
+}
+.intro .wrap .img-container img {
+  width: 100%;
+  height: 376px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: left;
+     object-position: left;
+}
+
+.second-section {
+  background-color: white;
+  margin-left: 0px;
+  margin-top: 50px;
+}
+.second-section .h2-h3-wrapper {
+  background: rgb(239, 128, 49);
+  background: linear-gradient(150deg, rgba(239, 128, 49, 0) 0%, rgba(239, 128, 49, 0.15) 69%, rgba(239, 128, 49, 0) 100%);
+  margin-right: 140px;
+  padding-left: 32px;
+}
+.second-section .h2-h3-wrapper h2 {
+  padding: 10px 0px 5px;
+  margin: 0px;
+}
+.second-section .h2-h3-wrapper h3 {
+  padding-bottom: 10px;
+  margin: 0px;
+}
+.second-section p {
+  margin-top: 16px;
+  margin-left: 32px;
+  margin-right: 85px;
+}
+.second-section .get-started-button {
+  margin-top: 17px;
+  margin-left: 32px;
+  background: rgb(100, 123, 100);
+  background: linear-gradient(121deg, rgb(100, 123, 100) 0%, rgb(102, 172, 102) 100%);
+}
+.second-section .services-box {
+  margin-top: 50px;
+}
+.second-section .services-box .wrap {
+  margin: 0px 32px;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  margin-left: 21.5px;
+  margin-top: 22px;
+  row-gap: 29px;
+  -moz-column-gap: 42px;
+       column-gap: 42px;
+}
+.second-section .services-box .wrap .inner-box:hover {
+  border-radius: 4.31px;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4392156863);
+}
+.second-section .services-box .wrap .inner-box .services-img-container {
+  display: block;
+  background-color: white;
+  width: 25.3px;
+  height: 25.3px;
+  padding: 5.3px;
+  border-radius: 4.31px;
+}
+.second-section .services-box .wrap .inner-box .services-img-container.first-card-img {
+  background-color: #647B64;
+}
+.second-section .services-box .wrap .inner-box .card-heading {
+  font-size: 12px;
+  text-transform: uppercase;
+  margin-top: 8px;
+  margin-bottom: 3px;
+}
+.second-section .services-box .wrap .inner-box .card-description {
+  font-size: 8px;
+  margin-right: 20.5px;
+  margin-left: 0px;
+  margin-top: 0;
 }/*# sourceMappingURL=style.css.map */
