--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,10 @@ body{
     
 }
 
+body, html{
+    overflow-x: hidden;
+}
+
 .container{
     // margin-top: 50px;
     max-width: 1440px;
@@ -33,6 +37,17 @@ h1{
     text-align: left;
 }
 
+h2{
+    font-size: 13px;
+    color: colors.$h2;
+    text-transform: uppercase;
+}
+h3{
+    font-size: 20px;
+    color: colors.$h3;
+    text-transform: uppercase;
+}
+
 p{
     color: colors.$p-text-color;
     font-size: 10px;
@@ -45,20 +60,20 @@ p{
 // }
 
 .wrap{
-    padding: 0px 32px;
+    // padding: 0px 32px;
 }
 
 .get-started-button{
     position: relative;
-    z-index: 10;
+    z-index: -10;
     display: block;
-    width: 175px;
-    height: 37px;
-    color: colors.$white;
+    max-width: 175px;
+    color: white;
     text-transform: uppercase;
-    background-color: colors.$button-bc;
+    background: rgb(100, 123, 100);
+    background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
     font-size: 11px;
-    font-style: bold;
+    font-weight: bold;
     padding: 15px 10px 10px;
     border-radius: 3px;
     &::after{
@@ -222,18 +237,111 @@ nav{
 }
 
 .intro{
-    h1{
-    max-width: 75%;
-    }
+    .wrap{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-right: 0px;
+        padding-left: 32px;
+        .content-box{
+            width: 70%;
+        }
+        .img-container{
+            width: 30%;
+            img{
+                width: 100%;
+                height: 376px;
+                object-fit: cover;
+                object-position: left;
+            }
+        }
+    }   
+}    
+
     
-    p{
-        max-width: 70%;
+
+.second-section{
+    background-color: colors.$white;
+    margin-left: 0px;
+    margin-top: 50px;
+    
+    .h2-h3-wrapper{
+        background: rgb(239,128,49);
+        background: linear-gradient(150deg, rgba(239,128,49,0) 0%, rgba(239,128,49,0.15) 69%, rgba(239,128,49,0) 100%);
+        margin-right: 140px;
+        padding-left: 32px;
+        
+        h2{
+            padding: 10px 0px 5px;
+            margin: 0px;
+        }
+        h3{
+            padding-bottom: 10px;
+            margin: 0px;
+        }
+        
     }
 
-    svg{
-        width: 50%;
-        position: relative;
-        left: 264px;
-        top: -380px;
+    p{
+        margin-top: 16px;
+        margin-left: 32px;
+        margin-right: 85px;
     }
+    .get-started-button{
+        margin-top: 17px;
+        margin-left: 32px;
+        background: rgb(100, 123, 100);
+        background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
+
+    }
+
+
+
+    .services-box{
+        margin-top: 50px;
+        .wrap{
+            margin: 0px 32px;
+            display: grid;
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-columns: repeat(2, 1fr);
+            margin-left: 21.5px;
+            margin-top: 22px;
+            row-gap: 29px;
+            column-gap: 42px;
+            .inner-box{
+                &:hover{
+                    border-radius: 4.31px;
+                    box-shadow: 0px 0px 3px 0px #00000070
+                }
+                .services-img-container{
+                display: block;
+                background-color: colors.$white;
+                width: 25.3px;
+                height: 25.3px;
+                padding: 5.3px;
+                border-radius: 4.31px;
+                    &.first-card-img{
+                    background-color: colors.$h3;
+                    }
+                    
+                }
+                .card-heading{
+                    font-size: 12px;
+                    text-transform: uppercase;
+                    margin-top: 8px;
+                    margin-bottom: 3px;
+                }
+                .card-description{
+                    font-size: 8px;
+                    margin-right: 20.5px;
+                    margin-left: 0px;
+                    margin-top: 0;
+                }
+            }
+        }
+    }        
 }
+
+
+
+
