--- a/style.css
+++ b/style.css
@@ -129,10 +129,12 @@ nav ul li {
     margin: 0 5px;
   }
   nav ul li:last-of-type {
-    background-color: #647B64;
+    background: rgb(100, 123, 100);
+    background: linear-gradient(121deg, rgb(100, 123, 100) 0%, rgb(102, 172, 102) 100%);
     color: white;
     padding: 15px 10px;
     line-height: 0px;
+    border-radius: 2px;
   }
 }
 nav ul li a {
@@ -160,16 +162,10 @@ nav ul li a:hover {
     font-size: 18px;
     color: rebeccapurple;
   }
-  nav ul li a:last-of-type {
-    padding-right: 0px;
-  }
 }
 @media (min-width: 1100px) {
   nav ul li a {
     padding: 7px 24px;
-  }
-  nav ul li a:last-of-type {
-    padding-right: 0px;
   }
 }
 nav .checkbtn {
@@ -341,5 +337,100 @@ nav #check:checked ~ ul {
   color: white;
 }
 .third-section .wrap .third-inner-box {
+  display: none;
+}
+
+.fourth-section {
+  background-color: transparent;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 57.4px;
+  justify-content: right;
+}
+.fourth-section .h2-h3-wrapper {
+  margin-right: 140px;
+  padding-left: 32px;
+}
+.fourth-section .h2-h3-wrapper h2 {
+  padding: 10px 0px 5px;
+  margin: 0px;
+}
+.fourth-section .h2-h3-wrapper h3 {
+  padding-bottom: 10px;
+  margin: 0px;
+}
+.fourth-section p {
+  margin-top: 16px;
+  margin-left: 32px;
+  margin-right: 85px;
+}
+.fourth-section .get-started-button {
+  margin-top: 17px;
+  margin-left: 32px;
+  background: rgb(100, 123, 100);
+  background: linear-gradient(121deg, rgb(100, 123, 100) 0%, rgb(102, 172, 102) 100%);
+}
+
+.fifth-section .wrap {
+  margin-left: 32px;
+}
+.fifth-section .wrap .grid-container {
+  display: flex;
+  flex-direction: row;
+  gap: 26px;
+}
+.fifth-section .wrap .grid-container .h2-h3-wrapper h3 {
+  font-size: 22px;
+  margin-right: 55px;
+}
+.fifth-section .wrap .grid-container .img-name-description-container {
+  display: grid;
+  grid-template-rows: repeat(2, 0.5fr);
+  grid-template-columns: repeat(2, 1fr);
+  background: rgb(100, 123, 100);
+  background: linear-gradient(0deg, rgba(100, 123, 100, 0.66) 0%, rgba(252, 247, 240, 0) 66%, rgba(253, 250, 246, 0) 100%);
+  overflow: hidden;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .img-name-container img {
+  width: 100%;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .brand-name-container {
+  padding-top: 10px;
+  grid-column-end: span 1;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .brand-name-container .brand {
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .brand-name-container .brand .bigger-font-size {
+  font-size: 12px;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .brand-name-container .name {
+  font-size: 8px;
+  text-transform: uppercase;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .brand-name-container .name .first-name-letter {
+  font-size: 10px;
+}
+.fifth-section .wrap .grid-container .img-name-description-container .clothes-description {
+  font-size: 12px;
+  font-style: italic;
+  grid-column-end: span 2;
+}
+.fifth-section .wrap .grid-container .first-card-container {
+  width: 80%;
+}
+.fifth-section .wrap .grid-container .second-card-container {
+  width: 80%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: right;
+     object-position: right;
+  transform: translateX(70%); /* Shift the container to the left */
+  overflow: hidden;
+}
+.fifth-section .wrap .grid-container .third-card-container {
   display: none;
 }/*# sourceMappingURL=style.css.map */
