--- a/style.scss
+++ b/style.scss
@@ -158,10 +158,12 @@ nav{
             line-height: 90px;
             margin: 0 5px;
             &:last-of-type{
-                background-color: #647B64;
+                background: rgb(100, 123, 100);
+                background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
                 color: white;
                 padding: 15px 10px;
                 line-height: 0px;
+                border-radius: 2px;
             }
             }
 
@@ -189,7 +191,7 @@ nav{
                     color: rebeccapurple;
                     }
                     &:last-of-type{
-                        padding-right: 0px;
+                        // padding-right: 0px;
                         
                     }
                 }
@@ -197,7 +199,7 @@ nav{
                     padding: 7px 24px;
 
                     &:last-of-type{
-                        padding-right: 0px;
+                        // padding-right: 0px;
                         
                     }
                     
@@ -419,6 +421,123 @@ nav{
         }
         
     }
+}
+
+.fourth-section{
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 57.4px;
+    justify-content: right;
+    
+    .h2-h3-wrapper{
+        margin-right: 140px;
+        padding-left: 32px;
+        
+        h2{
+            padding: 10px 0px 5px;
+            margin: 0px;
+        }
+        h3{
+            padding-bottom: 10px;
+            margin: 0px;
+        }
+        
+    }
+
+    p{
+        margin-top: 16px;
+        margin-left: 32px;
+        margin-right: 85px;
+    }
+    .get-started-button{
+        margin-top: 17px;
+        margin-left: 32px;
+        background: rgb(100, 123, 100);
+        background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
+
+    }
+
+}
+
+.fifth-section{
+    
+    
+    .wrap{
+        margin-left: 32px;
+        .grid-container{
+            display: flex;
+            flex-direction: row;
+            gap: 26px;
+            .h2-h3-wrapper{
+
+                h2{
+
+                }
+
+                h3{
+                    font-size: 22px;
+                    margin-right: 55px;
+                }
+            }
+            .img-name-description-container{
+                display: grid;
+                grid-template-rows: repeat(2, 0.5fr);
+                grid-template-columns: repeat(2, 1fr);
+
+                background: rgb(100,123,100);
+                background: linear-gradient(0deg, rgba(100,123,100,0.66) 0%, rgba(252,247,240,0) 66%, rgba(253,250,246,0) 100%);
+                overflow: hidden;
+                .img-name-container{
+                    img{
+                        width: 100%;
+                    }    
+                }
+
+                .brand-name-container{
+                    padding-top: 10px;
+                    grid-column-end: span 1;
+                    .brand{
+                        font-size: 10px;
+                        text-transform: uppercase;
+                        font-weight: bold;
+                        .bigger-font-size{
+                            font-size: 12px;
+                        }
+                    }
+                    .name{
+                        font-size: 8px;
+                        text-transform: uppercase;
+                        .first-name-letter{
+                            font-size: 10px;
+                        }
+                    }
+                }
+
+                .clothes-description{
+                    font-size: 12px;
+                    font-style: italic;
+                    grid-column-end: span 2;
+                } 
+            }
+            .first-card-container{
+                width: 80%;
+            }
+            .second-card-container{
+                width: 80%;
+                object-fit: contain;
+                object-position: right;
+                transform: translateX(70%); /* Shift the container to the left */
+                overflow: hidden;
+                
+            }
+
+            .third-card-container{
+                display: none;
+            }
+        }
+    }    
 }
 
 
