code was compiled into separate files

--- a/style.scss
+++ b/style.scss
@@ -1,640 +1,10 @@
-@use "code-parts/responsive";
-@use "code-parts/colors";
-
-*, *::before, *::after {
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-@font-face {
-    font-family: Avenir Next,;
-    src: url(/Fonts/AvenirNextLTPro-Regular.otf);
-}
-
-body{
-    font-family: Avenir Next, Verdana, sans-serif;
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(252,247,240,1) 100%);    
-    
-}
-
-body, html{
-    overflow-x: hidden;
-}
-
-.container{
-    // margin-top: 50px;
-    max-width: 1440px;
-    margin-right: auto;
-    margin-left: auto;
-    // padding-left: 20px;
-    // padding-right: 20px;
-}
-
-h1{
-    font-size: 24px;
-    color: #333333;
-    text-align: left;
-}
-
-h2{
-    font-size: 13px;
-    color: colors.$h2;
-    text-transform: uppercase;
-}
-h3{
-    font-size: 20px;
-    color: colors.$h3;
-    text-transform: uppercase;
-}
-
-p{
-    color: colors.$p-text-color;
-    font-size: 10px;
-    text-align-last: left;
-}
-
-// .content-wrap{
-//     margin-left: 140px;
-//     margin-right: 140px;
-// }
-
-.wrap{
-    // padding: 0px 32px;
-}
-
-.get-started-button{
-    position: relative;
-    z-index: -10;
-    display: block;
-    max-width: 175px;
-    color: white;
-    text-transform: uppercase;
-    background: rgb(100, 123, 100);
-    background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
-    font-size: 11px;
-    font-weight: bold;
-    padding: 15px 10px 10px;
-    border-radius: 3px;
-    &::after{
-        content: "";
-        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2212%22%20height%3D%228%22%20viewBox%3D%220%200%2012%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20d%3D%22M11.3827%203.57672L7.96713%200.158701C7.90131%200.107427%207.81908%200.0820071%207.73588%200.087215C7.65268%200.0924228%207.57424%200.127901%207.5153%200.186984C7.45635%200.246067%207.42096%200.32469%207.41576%200.408083C7.41057%200.491477%207.43593%200.573903%207.48708%200.639878L10.3177%203.47717H0.788396C0.697664%203.47717%200.610648%203.51329%200.54649%203.5776C0.482332%203.64191%200.446289%203.72913%200.446289%203.82007C0.446289%203.91102%200.482332%203.99824%200.54649%204.06255C0.610648%204.12685%200.697664%204.16298%200.788396%204.16298H10.3122L7.48708%206.99474C7.44877%207.02458%207.41723%207.06225%207.39456%207.10525C7.37188%207.14824%207.35859%207.19558%207.35557%207.24412C7.35254%207.29266%207.35986%207.34129%207.37702%207.38678C7.39418%207.43227%207.4208%207.47358%207.4551%207.50797C7.48941%207.54236%207.53063%207.56904%207.57601%207.58624C7.62139%207.60344%207.66991%207.61077%207.71833%207.60774C7.76676%207.6047%207.81399%207.59138%207.85688%207.56866C7.89978%207.54593%207.93736%207.51432%207.96713%207.47592L11.3827%204.05237C11.4441%203.98847%2011.4783%203.90323%2011.4783%203.81454C11.4783%203.72585%2011.4441%203.64061%2011.3827%203.57672Z%22%20fill%3D%22%23FEFEFE%22/%3E%3C/svg%3E");
-        background-repeat: no-repeat;
-        position: absolute;
-        z-index: -20;
-        width: 50%;
-        height: 50%;
-        background-size: 50% 50%;
-        background-position: 57px 1px;
-    }
-}
-
-nav{
-    background: transparent;
-    height: 128px;
-    width: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
-
-    .logo-container{
-        
-        display: inline-block;
-        padding-top: 35px;
-        
-        svg{
-            &:nth-of-type(2){
-            position: relative;
-            top: -17px;
-            }
-        }
-
-        @include responsive.xl{
-        padding-left: 130px;
-        display: inline-block;
-        padding-top: 35px;
-        }
-    }
-
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background-color: #F4E9E2;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-
-        @include responsive.lg{
-        position: static;
-        width: auto;
-        height: auto;
-        float: right;
-        // margin-right: 20px;
-        background-color: transparent;
-        text-align: right;
-            
-        }
-
-        // @include responsive.xl{
-        // position: static;
-        // width: auto;
-        // height: auto;
-        // float: right;
-        // margin-right: 20px;
-        // background-color: transparent;
-        // text-align: right;
-            
-        // }
-        
-        li{
-            display: block;
-            margin: 50px 0;
-            line-height: 30px;
-
-            @include responsive.lg{
-            display: inline-block;
-            line-height: 90px;
-            margin: 0 5px;
-            &:last-of-type{
-                background: rgb(100, 123, 100);
-                background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
-                color: white;
-                padding: 15px 10px;
-                line-height: 0px;
-                border-radius: 2px;
-            }
-            }
-
-            a{
-                color: #66AC66;
-                font-size: 20px;
-
-                &:hover{
-                    background: none;
-                    color: rebeccapurple;
-                    @include responsive.lg{
-                    color: red;
-                    transition: .5s;
-                    }
-                }
-                
-                @include responsive.lg{
-                    font-size: 16px;
-                    text-transform: uppercase;
-                    padding: 7px 12px;
-                    color: #333333;
-
-                    &:first-letter{
-                    font-size: 18px;
-                    color: rebeccapurple;
-                    }
-                    &:last-of-type{
-                        // padding-right: 0px;
-                        
-                    }
-                }
-                 @include responsive.xl{
-                    padding: 7px 24px;
-
-                    &:last-of-type{
-                        // padding-right: 0px;
-                        
-                    }
-                    
-                }
-
-                
-            }
-        }
-
-    }
-
-    .checkbtn{
-        font-size: 30px;
-        color: #222B45;
-        float: right;
-        line-height: 123px;
-        margin-right: 0px;
-        cursor: pointer;
-        display: block;
-        
-
-        @include responsive.lg{
-        display: none;
-        }
-    }
-
-    #check{
-        display: none;
-        &:checked ~ ul{
-            left: 0;
-        }
-        @include responsive.lg{
-            display: none;
-        }
-    }
-
-
-}
-
-.intro{
-    .wrap{
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        margin-right: 0px;
-        padding-left: 32px;
-        .content-box{
-            width: 70%;
-        }
-        .img-container{
-            width: 30%;
-            img{
-                width: 100%;
-                height: 376px;
-                object-fit: cover;
-                object-position: left;
-            }
-        }
-    }   
-}    
-
-    
-
-.second-section{
-    background-color: transparent;
-    margin-left: 0px;
-    margin-top: 50px;
-    margin-bottom: 57.4px;
-    
-    .h2-h3-wrapper{
-        background: rgb(239,128,49);
-        background: linear-gradient(150deg, rgba(239,128,49,0) 0%, rgba(239,128,49,0.15) 69%, rgba(239,128,49,0) 100%);
-        margin-right: 140px;
-        padding-left: 32px;
-        
-        h2{
-            padding: 10px 0px 5px;
-            margin: 0px;
-        }
-        h3{
-            padding-bottom: 10px;
-            margin: 0px;
-        }
-        
-    }
-
-    p{
-        margin-top: 16px;
-        margin-left: 32px;
-        margin-right: 85px;
-    }
-    .get-started-button{
-        margin-top: 17px;
-        margin-left: 32px;
-        background: rgb(100, 123, 100);
-        background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
-
-    }
-
-
-
-    .services-box{
-        margin-top: 50px;
-        .wrap{
-            margin: 0px 32px;
-            display: grid;
-            grid-template-rows: repeat(2, 1fr);
-            grid-template-columns: repeat(2, 1fr);
-            margin-left: 21.5px;
-            margin-top: 22px;
-            row-gap: 29px;
-            column-gap: 42px;
-            .inner-box{
-                &:hover{
-                    border-radius: 4.31px;
-                    box-shadow: 0px 0px 3px 0px #00000070
-                }
-                .services-img-container{
-                display: block;
-                background-color: colors.$white;
-                width: 25.3px;
-                height: 25.3px;
-                padding: 5.3px;
-                border-radius: 4.31px;
-                    &.first-card-img{
-                    background-color: colors.$h3;
-                    }
-                    
-                }
-                .card-heading{
-                    font-size: 12px;
-                    text-transform: uppercase;
-                    margin-top: 8px;
-                    margin-bottom: 3px;
-                }
-                .card-description{
-                    font-size: 8px;
-                    margin-right: 20.5px;
-                    margin-left: 0px;
-                    margin-top: 0;
-                }
-            }
-        }
-    }        
-}
-
-.third-section{
-    background-color: colors.$white;
-    
-    .headings-wrapper{
-        text-align: center;
-        h2{
-            margin-bottom: 10px;
-        }
-        h3{
-            margin-top: 0px;
-            margin-bottom: 16.5px;
-        }
-    }
-    .wrap{
-        margin-left: 47px;
-        display: flex;
-        gap: 17.45px;
-        justify-content: flex-end;
-        
-        
-        .inner-box{
-            background-color: azure;
-            padding: 34px 21.82px 31.5px;
-            width: 50%;
-            border-radius: 3.49px;
-            .services-img-container{
-
-            }
-            .card-heading{
-                font-size: 10px;
-                text-transform: uppercase;
-                span{
-                    font-size: 14px;
-                }
-            }
-            .card-description{
-                margin-top: 2.62px;
-                font-size: 8px;
-            }
-        }
-
-        .first-inner-box{
-            background: rgb(100,123,100);
-            background: linear-gradient(0deg, rgba(100,123,100,0.77) 0%, rgba(100,123,100,0) 66%, rgba(100,123,100,0) 100%);
-            // NESIGAVO
-            // &::after{
-            //     content: "";
-            //     background-image: url(Dots.png);
-            //     background-repeat: no-repeat;
-            //     position: absolute;
-            //     z-index: -10;
-            //     width: 50%;
-            //     height: 50%;
-            //     background-size: 100% 100%;
-            //     /* background-position: -70px -36px; */
-            //     outline: 1px solid red;
-            //     top: 84px;
-            //     left: -13px;
-
-            // }
-        }
-
-        .second-inner-box{
-            background-color: colors.$h3;
-            color: colors.$white;
-            .card-description{
-                color: colors.$white;
-            }
-        }
-
-        .third-inner-box{
-            display: none;
-        }
-        
-    }
-}
-
-.fourth-section{
-    background-color: transparent;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 57.4px;
-    justify-content: right;
-    
-    .h2-h3-wrapper{
-        margin-right: 140px;
-        padding-left: 32px;
-        
-        h2{
-            padding: 10px 0px 5px;
-            margin: 0px;
-        }
-        h3{
-            padding-bottom: 10px;
-            margin: 0px;
-        }
-        
-    }
-
-    p{
-        margin-top: 16px;
-        margin-left: 32px;
-        margin-right: 85px;
-    }
-    .get-started-button{
-        margin-top: 17px;
-        margin-left: 32px;
-        background: rgb(100, 123, 100);
-        background: linear-gradient(121deg, rgba(100, 123, 100, 1) 0%, rgba(102, 172, 102, 1) 100%);
-
-    }
-
-}
-
-.fifth-section{
-    margin-bottom: 64px;
-    
-    .wrap{
-        margin-left: 32px;
-        .grid-container{
-            display: flex;
-            flex-direction: row;
-            gap: 26px;
-            .h2-h3-wrapper{
-
-                h2{
-
-                }
-
-                h3{
-                    font-size: 22px;
-                    margin-right: 55px;
-                }
-            }
-            .img-name-description-container{
-                display: grid;
-                grid-template-rows: repeat(2, 0.5fr);
-                grid-template-columns: repeat(2, 1fr);
-
-                background: rgb(100,123,100);
-                background: linear-gradient(0deg, rgba(100,123,100,0.66) 0%, rgba(252,247,240,0) 66%, rgba(253,250,246,0) 100%);
-                overflow: hidden;
-                .img-name-container{
-                    img{
-                        width: 100%;
-                    }    
-                }
-
-                .brand-name-container{
-                    padding-top: 10px;
-                    grid-column-end: span 1;
-                    .brand{
-                        font-size: 10px;
-                        text-transform: uppercase;
-                        font-weight: bold;
-                        .bigger-font-size{
-                            font-size: 12px;
-                        }
-                    }
-                    .name{
-                        font-size: 8px;
-                        text-transform: uppercase;
-                        .first-name-letter{
-                            font-size: 10px;
-                        }
-                    }
-                }
-
-                .clothes-description{
-                    font-size: 12px;
-                    font-style: italic;
-                    grid-column-end: span 2;
-                } 
-            }
-            .first-card-container{
-                width: 80%;
-            }
-            .second-card-container{
-                width: 80%;
-                object-fit: contain;
-                object-position: right;
-                transform: translateX(70%); /* Shift the container to the left */
-                overflow: hidden;
-                
-            }
-
-            .third-card-container{
-                display: none;
-            }
-        }
-    }    
-}
-
-footer{
-    background-color: colors.$footer;
-    .wrap{
-        padding: 40px 60px 40px 32px;
-        
-       .about-container{
-            .logo-container{
-                display: inline-block;
-                svg{
-                    &:nth-of-type(2) {
-                    position: relative;
-                    top: -17px;
-                    }
-                }
-            }   
-            
-            p{
-                font-size: 14px;
-                text-align: left;
-            }
-            .socials-container{
-                margin-bottom: 40px;
-                
-                img{
-                    width: 32px;
-                    height: 32px;
-                    margin-right: 16px;
-                }
-            }
-        }
-            
-        
-       .company-support-container{
-        display: flex;
-        flex-direction: row;
-        gap: 40px;
-            .company{
-                width: 50%;
-                span{ 
-                    font-size: 20px;
-                    color: colors.$h3
-                }
-                ul{
-                    padding-left: 0px;
-                    li{
-                        font-size: 16px;
-                        padding-bottom: 12px;
-                        
-                    }
-                }
-            }
-            .support{
-                width: 50%;
-                span{
-                    font-size: 20px;
-                    color: colors.$h3
-                }
-                ul{
-                    padding-left: 0px;
-                    li{
-                        font-size: 16px;
-                        padding-bottom: 12px;
-                    }
-                }
-            }
-        }
-
-       
-        .send-message-container{
-            position: relative;
-            z-index: 20;
-            .send-msg{
-                font-size: 20px;
-                color: colors.$h3;
-                text-transform: uppercase;
-                
-            }
-            #email{
-                border: none;
-                width: 283px;
-                height: 113px;
-                margin-top:  13px;
-                margin-bottom: 28px;
-            }
-            .get-started-button{
-                max-width: none;
-                width: 283px;
-                &:after{
-                    background-position: 97px 1px;
-                }
-            }    
-        }
-       
-    }
-    
-}
-
-
+@use 'code-parts/responsive';
+@use 'code-parts/colors';
+@use 'code-parts/base';
+@use 'code-parts/navbar';
+@use 'code-parts/intro';
+@use 'code-parts/second-section';
+@use 'code-parts/third-section';
+@use 'code-parts/fourth-section';
+@use 'code-parts/fifth-section';
+@use 'code-parts/footer';
