corrected font path

--- a/code-parts/_base.scss
+++ b/code-parts/_base.scss
@@ -8,8 +8,8 @@
 }
 
 @font-face {
-    font-family: Avenir Next,;
-    src: url(/Fonts/AvenirNextLTPro-Regular.otf);
+    font-family: "Avenir Next";
+    src: url("/Fonts/AvenirNextLTPro-Regular.otf");
 }
 
 body{
